# socar-data-workshop-backend

./: README.md  pyproject.toml
examples/01/: README.md  main.py
examples/02/: README.md  data.py  main.py
examples/03/: README.md  data.py  main.py  req_res_objects.py
examples/04/: README.md  data.py  main.py  req_res_objects.py
examples/05/: controller.py  instances.py  main.py  model.py
examples/06/: config.yaml  container.py  controller.py  main.py  repository.py  req_res_objects.py  service.py
