[tool.poetry]
name = "socar-data-workshop-backend"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = {extras = ["all"], version = "^0.63.0"}
dependency-injector = "^4.32.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pycln = "^0.0.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
